--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
     <script src="./lib/addons/p5.sound.min.js"></script>
     <script src="./src/sketch.js"></script>
     <script src="./src/Gemzer/Gemzer.js"></script>
+    <script src="./src/Gemzer/Shot.js"></script>
     <script src="./src/Map/Map.js"></script>
     <script src="./src/Map/EnemyHandler.js"></script>
+    <script src="./src/Map/ShotHandler.js"></script>
     <script src="./src/Socker/Listener.js"></script>
     
   </head>
